--- a/index.html
+++ b/index.html
@@ -6,11 +6,175 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Network</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <!-- banner section start -->
+    <section class="banner">
+        <div class="container">
+            <div class="row align-center">
+                <div class="banner-content half-width">
+                    <h1><span class="orange-color">Skip </span>The Diet,</h1>
+                    <h1>Just Eat Healthy</h1>
+                    <h1>With Food Network</h1>
+                    <p>Imagine you don't need a diet because we provide
 
+                        healthy and delicious food for you!</p>
+                    <a target="_blank" href="https://github.com/ahammedsojon/food-network" class="link-btn">Order
+                        Food</a>
+                </div>
+                <div class="banner-img half-width">
+                    <img src="./images/male/banner.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- banner section end -->
+
+    <!-- about section start -->
+    <section class="about">
+        <div class="container">
+            <div class="row align-center">
+                <div class="about-img half-width">
+                    <img src="./images/male/portfolio-removebg-preview.png" alt="">
+                </div>
+                <div class="about-content half-width">
+                    <h2>About Me</h2>
+                    <p>Hi there, I'm Sojon. I'm from Jashore,Khulna,Bangladesh. I had completed my diploma engineering
+                        from Jashore Polytechnic Institute since 2019. Nowadays I am learning web development from
+                        Programming Hero. My ambition is to be a well skilled web deveploper. I want to see me as a full
+                        stack web deveploper in future.</p>
+                    <a target="_blank" href="https://www.facebook.com/mdsajon.ahmed.585/" class="link-btn">Contact
+                        me</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- about section end -->
+
+    <!-- recipie section start -->
+    <section class="recipie">
+        <div class="container">
+            <div class="recipie-description">
+                <h2 class="recipie-title">My Recipies</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nam placeat ipsam nobis voluptas a!
+                    Mollitia
+                    ipsum quis inventore tempore architecto nulla labore.</p>
+            </div>
+            <div class="row">
+                <div class="recipie-item">
+                    <img src="./images/food/Project Cover.jpg" alt="">
+                    <h3>Recipie Title</h3>
+                    <p>Lorem ipsum dolor sit amet,
+                        consectetur adipiscing elit. Lacus,
+                        fermentum amet faucibus sed id nisi
+                        lectus at.</p>
+                </div>
+                <div class="recipie-item">
+                    <img src="./images/food/Project Cover1.jpg" alt="">
+                    <h3>Recipie Title</h3>
+                    <p>Lorem ipsum dolor sit amet,
+                        consectetur adipiscing elit. Lacus,
+                        fermentum amet faucibus sed id nisi
+                        lectus at.</p>
+                </div>
+                <div class="recipie-item">
+                    <img src="./images/food/Project Cover.png" alt="">
+                    <h3>Recipie Title</h3>
+                    <p>Lorem ipsum dolor sit amet,
+                        consectetur adipiscing elit. Lacus,
+                        fermentum amet faucibus sed id nisi
+                        lectus at.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- recipie section end -->
+
+    <!-- subsriber section start -->
+    <section class="subscriber">
+        <div class="container">
+            <div class="row subscribe-items">
+                <div class="subscribe-number">
+                    <h1>700k</h1>
+                    <p>Youtube subscribers</p>
+                </div>
+                <div class="subscribe-number">
+                    <h1>2.4m</h1>
+                    <p>Instagram Followers</p>
+                </div>
+                <div class="subscribe-number">
+                    <h1>100k</h1>
+                    <p>Dribbble Shot Likes</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- subsriber section end -->
+
+    <!-- testimonial section start -->
+    <section class="testimonial">
+        <div class="container">
+            <div class="team-description">
+                <h2 class="team-title">My teams</h2>
+                <p>who with me</p>
+            </div>
+            <div class="row">
+                <div class="team-member">
+                    <img src="./images/male/member-1.jpeg" alt="">
+                    <h3>Peter Parker</h3>
+                    <p>Lorem ipsum dolor sit amet,
+                        consectetur adipiscing elit. Lacus,
+                        fermentum amet faucibus sed id nisi
+                        lectus at.</p>
+                </div>
+                <div class="team-member">
+                    <img src="./images/male/member-2.jpeg" alt="">
+                    <h3>Alan Walker</h3>
+                    <p>Lorem ipsum dolor sit amet,
+                        consectetur adipiscing elit. Lacus,
+                        fermentum amet faucibus sed id nisi
+                        lectus at.</p>
+                </div>
+                <div class="team-member">
+                    <img src="./images/male/member-3.jpeg" alt="">
+                    <h3>Bella Swan</h3>
+                    <p>Lorem ipsum dolor sit amet,
+                        consectetur adipiscing elit. Lacus,
+                        fermentum amet faucibus sed id nisi
+                        lectus at.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- testimonial section end -->
+
+    <!-- contact section start -->
+    <section class="contact">
+        <div class="container">
+            <div class="contact-description">
+                <h2 class="contact-title">Contact me</h2>
+                <p>get in touch</p>
+            </div>
+            <div class="row">
+                <form action="">
+                    <input type="text" placeholder="Name" class="input">
+                    <input type="email" placeholder="Email" class="input">
+                    <textarea name="" id="" cols="" rows="3" class="input" placeholder="Message.."></textarea>
+                    <button type="submit" class="link-btn">Send message</button>
+                </form>
+            </div>
+        </div>
+    </section>
+    <!-- contact section end -->
+    <footer>
+        <h3><span>Food</span> Network</h3>
+        <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+    </footer>
 </body>
 
 </html>
