--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         Food</a>
                 </div>
                 <div class="banner-img half-width">
-                    <img src="./images/male/banner.png" alt="">
+                    <img src="./images/male/Group 8450 (1).png" alt="">
                 </div>
             </div>
         </div>
@@ -36,7 +36,7 @@
     <!-- banner section end -->
 
     <!-- about section start -->
-    <section class="about">
+    <section class=" about">
         <div class="container">
             <div class="row align-center">
                 <div class="about-img half-width">
@@ -44,9 +44,12 @@
                 </div>
                 <div class="about-content half-width">
                     <h2>About Me</h2>
-                    <p>Hi there, I'm Sojon. I'm from Jashore,Khulna,Bangladesh. I had completed my diploma engineering
-                        from Jashore Polytechnic Institute since 2019. Nowadays I am learning web development from
-                        Programming Hero. My ambition is to be a well skilled web deveploper. I want to see me as a full
+                    <p>Hi there, I'm Sojon. I'm from Jashore,Khulna,Bangladesh. I had completed my diploma
+                        engineering
+                        from Jashore Polytechnic Institute since 2019. Nowadays I am learning web
+                        development from
+                        Programming Hero. My ambition is to be a well skilled web deveploper. I want to see
+                        me as a full
                         stack web deveploper in future.</p>
                     <a target="_blank" href="https://www.facebook.com/mdsajon.ahmed.585/" class="link-btn">Contact
                         me</a>
