--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <form action="">
                     <input type="text" placeholder="Name" class="input">
                     <input type="email" placeholder="Email" class="input">
-                    <textarea name="" id="" cols="" rows="3" class="input" placeholder="Message.."></textarea>
+                    <textarea name="" id="" cols="" rows="3" class="input" placeholder="Message..."></textarea>
                     <button type="submit" class="link-btn">Send message</button>
                 </form>
             </div>
